src/test/deca/context/invalid/expr_cast_Object_to_boolean.deca
// Test de la règle (3.39) : on ne peut pas cast de Object vers boolean.
{
	boolean var1;
	Object var2;
	var1 = (boolean)(var2);
}

// Résultat :
//# a
